# apebench

./: .gitignore  .gitmodules  404.html  README.md  explore_sample_data_streamlit.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: build_docs.yml  test.yml  validate.yml
apebench/: __init__.py  _base_scenario.py  _cli.py  _extensions.py  _run.py  _scraper.py  _utils.py
apebench/components/: __init__.py  _activation_function.py  _architectures.py  _initial_condition.py  _metrics.py
apebench/modules/: __init__.py  _metrics.py
docs/: arguments.md  extending_apebench.md  index.md  typical_workflow.md  use_cases.md  using_cli.md
docs/api/: utils.md
docs/examples/: animate_emulator_learning_burgers.ipynb  benchmark_flax_models_with_linen.ipynb  benchmark_flax_models_with_nnx.ipynb  benchmark_pytorch_models.ipynb  component_extensions.ipynb  scrape_datasets.ipynb  simple_advection_1d_learning.ipynb  sources_of_randomness_and_reproducibility.ipynb
docs/misc/: faq.md  gotchas.md  tips.md
examples/animate_emulator_learning_burgers/: index.html
examples/difficulty_and_receptive_field_advection_1d/: index.html
examples/scrape_datasets/: index.html
examples/simple_advection_1d_learning/: index.html
examples/sources_of_randomness_and_reproducibility/: index.html
extending_apebench/: index.html
search/: search_index.json
tests/: test_builtin_scenarios.py  test_check_nans.py  test_external_metric_computation.py  test_metric_system.py
tests/test_components/: test_activation_fn_components.py  (+3 more)
typical_workflow/: index.html
using_cli/: index.html
validation/: test_check_nans.py
(+62 files in other folders)
